// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs should render correctly 1`] = `
<div>
  <div
    class="tabs-root light MuiBox-root css-0"
  >
    <div
      class="MuiTabs-root medium css-1ujnqem-MuiTabs-root"
      color="primary"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
        style="overflow: hidden; margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
          role="tablist"
        />
        <span
          class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
    <div
      style="overflow-x: hidden;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      />
    </div>
  </div>
</div>
`;

exports[`Tabs should render correctly with options 1`] = `
<div>
  <div
    class="tabs-root light MuiBox-root css-0"
  >
    <div
      class="MuiTabs-root medium css-1ujnqem-MuiTabs-root"
      color="primary"
    >
      <div
        class="MuiTabs-scroller MuiTabs-fixed css-jpln7h-MuiTabs-scroller"
        style="overflow: hidden; margin-bottom: 0px;"
      >
        <div
          class="MuiTabs-flexContainer css-heg063-MuiTabs-flexContainer"
          role="tablist"
        >
          <button
            aria-selected="true"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary Mui-selected tab-root light css-bqvrnz-MuiButtonBase-root-MuiTab-root"
            color="primary"
            role="tab"
            tabindex="0"
            type="button"
          >
            Tab label 1
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
          <button
            aria-selected="false"
            class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tab-root light css-bqvrnz-MuiButtonBase-root-MuiTab-root"
            color="primary"
            role="tab"
            tabindex="-1"
            type="button"
          >
            Tab label 2
            <span
              class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
            />
          </button>
        </div>
        <span
          class="MuiTabs-indicator css-1aquho2-MuiTabs-indicator"
          style="left: 0px; width: 0px;"
        />
      </div>
    </div>
    <div
      style="overflow-x: hidden;"
    >
      <div
        class="react-swipeable-view-container"
        style="flex-direction: row; transition: all 0s ease 0s; direction: ltr; display: flex; will-change: transform;"
      >
        <div
          aria-hidden="false"
          data-swipeable="true"
          style="width: 100%; flex-shrink: 0; overflow: auto;"
        >
          <div
            class="panel-root"
            id="0"
          >
            <div
              class="MuiBox-root css-0"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
